Refactor code to simplify view lookups and improve readability; update deprecated methods and enhance error handling